Set up SFML window

--- a/Pi Day 2023/Pi Day 2023.vcxproj
+++ b/Pi Day 2023/Pi Day 2023.vcxproj
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MonteCarloPi.cpp" />
     <ClCompile Include="Pi Day 2023.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Constants.h" />
+    <ClInclude Include="MonteCarloPi.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
