--- a/Pi Day 2023/Pi Day 2023.vcxproj.filters
+++ b/Pi Day 2023/Pi Day 2023.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="Pi Day 2023.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MonteCarloPi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Constants.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MonteCarloPi.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
